main.css
/* Fonts */
/*
 * Simple line icons (https://github.com/simplelineicons/simplelineicons.github.io)
 * MIT License: /files/fonts/simple-line-icons-LICENSE.md
 */
 @font-face {
  font-family: "simple-line-icons";
  src: url("files/fonts/Simple-Line-Icons.woff2?v=2.4.0") format("woff2"),
    url("files/fonts/Simple-Line-Icons.ttf?v=2.4.0") format("truetype");
  font-weight: normal;
  font-style: normal;
}
/*
 * Cascadia Code (https://github.com/microsoft/cascadia-code)
 * SIL Open Font License 1.1: /files/fonts/cascadia-code-LICENSE
 */
@font-face {
  font-family: "Cascadia Code";
  src: local("Cascadia Code"),
    url("files/fonts/CascadiaCode.woff2") format("woff2"),
    url("files/fonts/CascadiaCode.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}
/*
 * Roboto (https://github.com/googlefonts/roboto)
 * Apache License 2.0: /files/fonts/roboto-LICENSE
 */
@font-face {
  font-family: Roboto;
  src: local("Roboto"), url("files/fonts/Roboto-Regular.ttf") format("truetype");
  font-weight: 400;
  font-style: normal;
}
@font-face {
  font-family: Roboto;
  src: local("Roboto"), url("files/fonts/Roboto-Italic.ttf") format("truetype");
  font-weight: 400;
  font-style: italic;
}
@font-face {
  font-family: Roboto;
  src: local("Roboto Black"), url("files/fonts/Roboto-Bold.ttf") format("truetype");
  font-weight: 700;
  font-style: normal;
}
@font-face {
  font-family: Roboto;
  src: local("Roboto Black"), url("files/fonts/Roboto-BoldItalic.ttf") format("truetype");
  font-weight: 700;
  font-style: italic;
}

/* color vars */
:root {
  --bg: #ffffff;
  --text: #000000;
  --accent: #77e4ff;
  --accent-2: #a6edff;
  --bg-gradient: linear-gradient(131deg, rgba(8,19,27,1) 0%, rgba(59,108,140,1) 100%);
  --header-filter: none;
  --article-bg: #ffffff;
  --link: #0066cc;
  --link-active: #454545;
  --footer-bg: #898989;
  --hover-bg: #efefef;
  --target: yellow;
}
@media (prefers-color-scheme: dark) {
  :root {
    /* color vars */
    --bg: #22222b;
    --text: #cdcdcd;
    --accent: #77e4ff;
    --accent-2: #1e1e1e;
    --bg-gradient: linear-gradient(171deg, #1f3746 0%, #2e2b33 100%);
    --header-filter: brightness(0.7);
    --article-bg: #292929;
    --link: #63bae6;
    --link-active: #999d9e;
    --footer-bg: #1a1a1a;
    --hover-bg: #303030;
    --target: #416064;
  }
  img {filter: brightness(.75) contrast(1.05)}
  * {box-shadow: none !important}
  ::selection {background-color: rgba(93, 106, 117, 0.3)}
}

* {
  box-sizing: border-box;
  scroll-margin-top: 2em;
}

:target {animation: targetFade 2.5s}
@keyframes targetFade {
  0% {background-color: var(--target)}
  20% {background-color: var(--target)}
  100% {background-color: none}
}

body {
  margin: 0;
  background: var(--bg);
  color: var(--text);
  font-family: Roboto, sans-serif;
  scroll-behavior: smooth;
}
a {
  color: var(--text);
  border: 1px solid transparent;
  transition: color 0.3s, border-color 0.5s;
  cursor: pointer;
  text-decoration: none;
  outline: none;
}
a:hover, a:active, a:focus {color: var(--link-active)}
a:focus-visible {border-color: var(--link-active)}

code {
  font-family: "Cascadia Code", monospace;
  font-size: .8em;
  color: var(--code-color);
  background-color: var(--light-bg);
  border: 2px solid transparent;
  padding: 2px;
  border-radius: 6px;
}

pre {
  font-family: 'Cascadia Code', monospace;
  font-size: .9em;
  overflow: hidden;
  overflow-x: auto;
  margin: .5em 0;
  padding: .8em .6em;
  border: 2px solid var(--accent);
  border-radius: 8px;
  background-color: var(--article-bg);
}

.icon::before {font-family: "simple-line-icons"}

/* header */
header {
  padding: 1em 1.5em 0 1.5em;
  margin-bottom: 1em;
  color: white;
}
header h1 {
  margin: 1.5em 0 0.2em 0;
  font-size: 3em;
}
header a {color: inherit}
header a:hover, header a:focus, header a:active {color: var(--accent)}
header a:focus-visible {border-color: var(--accent);}
header p {margin: 0}
/* header background */
#bg {
  display: block;
  width: 100%;
  height: 360px;
  position: absolute;
  top: 0;
  left: 0;
  z-index: -3;
  transition: width .5s, height .5s;
}
#bg::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: #0B161D;
  background-image: url(i/bg.png);
  background-repeat: no-repeat;
  background-size: 100% auto;
  transition: opacity .4s ease-in-out;
  z-index: -4;
  opacity: 0.3;
  filter: var(--header-filter)
}
#bg::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: #0B161D;
  background: var(--bg-gradient);
  z-index: -5;
}
/* bg styling changes need an exact size to be applied to */
@media (max-width: 900px) {
  #bg {height: 360px}
}
@media (max-width: 540px) {
  #bg::before {background-size: auto 100%}
}
@media (hover: hover) and (prefers-reduced-motion: no-preference) {
  header:hover #bg::before {opacity: 0.4}
}

/* nav bar */
nav {
  padding: 0 1.5em;
  margin: 1.5em 0;
  font-size: 1em;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
}
nav a {
  display: block;
  padding: 0 8px;
  margin-right: .4em;
  color: white;
  transition: color 0.3s, border-color 0.3s;
  border: 1px solid transparent;
}
nav .current {border-bottom-color: var(--accent)}
nav a:hover, nav a:focus, nav:active {
  color: var(--accent);
  border-bottom-color: var(--accent);
}
nav a:focus-visible {border-color: var(--accent)}

/* search button */
#search.isIcon {
  position: absolute;
  right: 1.5em;
  margin: 0;
}
#search.isIcon:hover {border-color: transparent}
#search.isIcon::before {content: "\e090"}

/* body */
.main {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  margin: 0 2em;
}
.main h1 {margin: .3em 0}
.main h2 {font-size: 1.2em}
.main h3 {
  font-size: 1em;
  margin: .6em 0 0em 0;
}
.main ul {
  margin: 0 0 .8em 0;
  padding-left: 20px;
}
/* ... */

